--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,4 @@
 @import "./utils/variables";
-@import "./components/base-utils" @import "./components/header-logo";
+@import "./components/base-utils";
+@import "./components/header-logo";
+@import "./components/navigation";
