--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,8 +1,8 @@
-.main-nav {
+.navigation {
   border-bottom: 1px solid #ececec;
 }
 
-.main-nav .container {
+.navigation__container {
   display: flex;
   align-items: center;
   justify-content: center;
