--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,3 +2,7 @@
 @import "./components/base-utils";
 @import "./components/header-logo";
 @import "./components/navigation";
+@import "./components/site-nav";
+@import "./components/aut-nav";
+@import "./components/hero-section";
+@import "./components/hero-modal";
