--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,3 +1,10 @@
-body {
-  background-color: aliceblue;
-}
+@import "./utils/variables";
+@import "./components/base-utils";
+@import "./components/header-logo";
+@import "./components/navigation";
+@import "./components/site-nav";
+@import "./components/aut-nav";
+@import "./components/portfolio/portfolio-button";
+@import "./components/portfolio/portfolio-card";
+@import "./components/fotter";
+@import "./components/fotter-link";
