--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,10 @@
 @import "./components/aut-nav";
 @import "./components/hero-section";
 @import "./components/hero-modal";
+@import "./components/benefits";
+@import "./components/work-section";
+@import "./components/team";
+@import "./components/team__social-list";
+@import "./components/clients";
+@import "./components/fotter";
+@import "./components/fotter-link";
