--- a/sass/components/_hero-modal.scss
+++ b/sass/components/_hero-modal.scss
@@ -143,7 +143,7 @@ textarea {
   cursor: pointer;
 }
 .checkbox__text:focus .checkbox__svg {
-  color: #2196f3;
+  color: $accent-color;
 }
 .modal__form-field textarea::placeholder {
   font-size: 14px;
@@ -153,7 +153,7 @@ textarea {
   color: rgba(117, 117, 117, 0.5);
 }
 .modal__form-field textarea:focus {
-  border-color: #2196f3;
+  border-color: $accent-color;
 }
 .button__form {
   border-radius: 4px;
@@ -171,9 +171,8 @@ textarea {
   line-height: 1.9;
   letter-spacing: 0.06em;
   cursor: pointer;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: $card-shadow;
+  transition: background-color $transition-time $transition-cubic;
 }
 .button-form:hover,
 .button-form:focus {
@@ -197,7 +196,7 @@ textarea {
   width: 30px;
   height: 30px;
   background-size: cover;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill $transition-time $transition-cubic;
 }
 .button-close__svg:hover,
 .button-close__svg:focus {
@@ -208,7 +207,7 @@ textarea {
   border-color: $accent-color;
 }
 .checkbox__link {
-  color: #2196f3;
+  color: $accent-color;
   margin-left: 5px;
   text-decoration: underline;
 }
