--- a/sass/components/_base-utils.scss
+++ b/sass/components/_base-utils.scss
@@ -32,3 +32,14 @@ ul {
   padding: 0;
   margin: 0;
 }
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+
+  color: $title__text-color;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
