--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,17 @@ ul {
   margin: 0;
 }
 
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: #212121;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 .logo {
   color: #2196f3;
   font-family: "Raleway", sans-serif;
@@ -47,6 +58,10 @@ ul {
 .accent-logo {
   color: #212121;
   font-family: "Raleway", sans-serif;
+}
+
+.accent-logo--color {
+  color: #ffffff;
 }
 
 .navigation {
@@ -512,4 +527,465 @@ textarea {
   color: #2196f3;
   margin-left: 5px;
   text-decoration: underline;
+}
+
+.benefits__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.benefits__item {
+  width: 270px;
+  margin-right: 30px;
+}
+
+.benefits__item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.benefits__item::before {
+  display: block;
+  content: "";
+  height: 120px;
+  margin-bottom: 30px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.benefits__item:nth-child(1)::before {
+  background-image: url(../images/Icon.svg/antenna\ 1.svg);
+}
+
+.benefits__item:nth-child(2)::before {
+  background-image: url(../images/Icon.svg/clock\ 1.svg);
+}
+
+.benefits__item:nth-child(3)::before {
+  background-image: url(../images/Icon.svg/Vector.svg);
+}
+
+.benefits__item:nth-child(4)::before {
+  background-image: url(../images/Icon.svg/astronaut\ 1.svg);
+}
+
+.benefits__title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+}
+
+.benefits__text {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.work {
+  padding-bottom: 94px;
+}
+
+.work__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow: hidden;
+}
+
+.work__list .work__thumb {
+  position: relative;
+}
+
+.work__list .work__thumb::before {
+  display: block;
+  position: absolute;
+  content: "";
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work__thumb:hover .text-desctop {
+  opacity: 1;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work__thumb:hover::before {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.work__item {
+  margin-right: 30px;
+  overflow: hidden;
+}
+
+.work__item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.work__text {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+}
+
+.work__text--desktop {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  min-width: 205px;
+  margin-bottom: 27px;
+  margin-top: 27px;
+}
+
+.team {
+  background-color: #f5f4fa;
+}
+
+.team__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  text-align: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.team__item {
+  border-radius: 0px 0px 4px 4px;
+}
+
+.card__team {
+  border: 1px solid #ececec;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 30px;
+}
+
+.card__team--text {
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+
+.card__team--title {
+  margin-bottom: 10px;
+  margin-top: 0;
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+}
+
+.socials-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.socials-list__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socials-list__icon {
+  padding: 0;
+  border: 0;
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+}
+
+.socials-list__link:hover,
+.socials-list__link:focus {
+  background-color: #2196f3;
+}
+
+.socials-list__link:hover .socials-list__icon,
+.socials-list__link:focus .socials-list__icon {
+  fill: #ffffff;
+}
+
+.clients__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.clients__item {
+  width: 170px;
+  height: 92px;
+}
+
+.clients__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  fill: #afb1b8;
+  border-color: #757575;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__link:hover,
+.clients__link:focus {
+  fill: #2196f3;
+  border-color: #2196f3;
+}
+
+.clients__icon {
+  width: 106px;
+  height: 90px;
+}
+
+.fotter {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+
+.fotter__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.address {
+  display: inline-block;
+}
+
+.address-link {
+  display: inline-block;
+  margin-bottom: 9px;
+  margin-top: 20px;
+  color: #ffffff;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
+}
+
+.address__contacts {
+  display: inline-block;
+  margin-bottom: 9px;
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
+}
+
+.address__contacts--tel {
+  display: inline-block;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.fotter-links {
+  display: block;
+  width: 206px;
+  margin-left: 70px;
+}
+
+.fotter-strong {
+  margin-bottom: 20px;
+  border-bottom: 20px;
+  margin-top: 0;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.fotter-links__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-top: 20px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.fotter-links__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.fotter-links__link:hover,
+.fotter-links__link:focus {
+  background-color: #2196f3;
+}
+
+.fotter-links__svg {
+  padding: 0;
+  border: 0;
+  fill: #ffffff;
+}
+
+.fotter-form {
+  position: relative;
+  margin-left: 93px;
+  display: block;
+  min-width: 570px;
+}
+
+.fotter-form__mail {
+  position: relative;
+}
+
+.fotter-form__input {
+  padding-left: 16px;
+  margin-top: 20px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: #2f303a;
+  border-radius: 4px;
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+.fotter-form__input:focus + .fotter-form__label {
+  color: #ffffff;
+}
+
+.fotter-form__label {
+  position: absolute;
+  bottom: 15px;
+  left: 16px;
+}
+
+.fotter-form__button {
+  position: relative;
+  border-radius: 4px;
+  margin-top: 20px;
+  margin-left: 12px;
+  min-width: 200px;
+  height: 50px;
+  border: solid transparent;
+  display: inline-block;
+  padding-right: 36px;
+  color: #ffffff;
+  background-color: #2196f3;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+}
+
+.fotter-form__button::after {
+  position: absolute;
+  right: 10px;
+  content: "";
+  background-size: contain;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  margin-top: 2px;
+  margin-right: 18px;
+  background-image: url(../images/Icon.svg/icon\ send.svg);
 }/*# sourceMappingURL=main.css.map */
