--- a/css/main.css
+++ b/css/main.css
@@ -485,8 +485,8 @@ textarea {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-form:hover,
-.button-form:focus {
+.button__form:hover,
+.button__form:focus {
   background-color: #188ce8;
 }
 
