--- a/sass/components/_fotter-link.scss
+++ b/sass/components/_fotter-link.scss
@@ -1,9 +1,9 @@
 .fotter-links {
   display: block;
-
   width: 206px;
   margin-left: 70px;
 }
+
 .fotter-strong {
   margin-bottom: 20px;
   border-bottom: 20px;
@@ -16,35 +16,34 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
-  color: #ffffff;
+  color: $primari-bg-color;
 }
+
 .fotter-links__list {
+  @extend %list;
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
   margin-top: 20px;
   justify-content: space-between;
 }
+
 .fotter-links__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %centeredFlex;
   width: 44px;
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.fotter-links__link:hover,
-.fotter-links__link:focus {
-  background-color: #2196f3;
-}
-.fotter-links__svg {
-  padding: 0;
-  border: 0;
+  transition: background-color $transition-time $transition-cubic;
 
-  fill: #ffffff;
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
+}
+
+.fotter-links__svg {
+  @extend %list;
+
+  fill: $primari-bg-color;
 }
 
 .fotter-form {
@@ -53,9 +52,11 @@
   display: block;
   min-width: 570px;
 }
+
 .fotter-form__mail {
   position: relative;
 }
+
 .fotter-form__input {
   padding-left: 16px;
 
@@ -65,17 +66,20 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: #2f303a;
   border-radius: 4px;
-  color: #ffffff;
+  color: $primari-bg-color;
   border-color: rgba(255, 255, 255, 0.3);
 }
-.fotter-form__input:focus + .fotter-form__label {
-  color: #ffffff;
-}
+
 .fotter-form__label {
   position: absolute;
   bottom: 15px;
   left: 16px;
+
+  .fotter-form__input:focus & {
+    color: $primari-bg-color;
+  }
 }
+
 .fotter-form__button {
   position: relative;
   border-radius: 4px;
@@ -97,18 +101,18 @@
   text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
-}
 
-.fotter-form__button::after {
-  position: absolute;
-  right: 10px;
-  content: "";
-  background-size: contain;
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  margin-top: 2px;
-  margin-right: 18px;
+  &::after {
+    position: absolute;
+    right: 10px;
+    content: "";
+    background-size: contain;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    margin-top: 2px;
+    margin-right: 18px;
 
-  background-image: url(../images/Icon.svg/icon\ send.svg);
+    background-image: url(../images/Icon.svg/icon\ send.svg);
+  }
 }
