--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -7,9 +7,11 @@
   font-size: 14px;
   line-height: 1.14;
 }
+
 .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
+
 .site-nav__link {
   position: relative;
   display: block;
@@ -23,27 +25,31 @@
   text-decoration: none;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
-.site-nav__link:hover,
-.site-nav__link:focus {
-  color: $accent-color;
-}
-.site-nav__link--current::after {
-  display: inline-block;
-  content: "";
-  width: 100%;
-  height: 4px;
-  left: 0;
-  bottom: 0;
-  position: absolute;
-  background-color: #2196f3;
-  border-radius: 4px;
-  margin-bottom: 0;
-  transition: opacity $transition-time $transition-cubic;
-}
-.site-nav__link--current:hover::after {
-  opacity: 1;
-}
+
 .site-nav__link--current {
   color: $accent-color;
+
+  &::after {
+    display: inline-block;
+    content: "";
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: #2196f3;
+    border-radius: 4px;
+    margin-bottom: 0;
+    transition: opacity $transition-time $transition-cubic;
+  }
+
+  &:hover::after {
+    opacity: 1;
+  }
 }
