--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -6,31 +6,34 @@
 .benefits__item {
   width: 270px;
   margin-right: 30px;
+
+  &:nth-child(4n) {
+    margin-right: 0;
+  }
+
+  &::before {
+    display: block;
+    content: "";
+    height: 120px;
+    margin-bottom: 30px;
+    background-color: $secondary-background-color;
+    border-radius: 4px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
-.benefits__item:nth-child(4n) {
-  margin-right: 0;
-}
-.benefits__item::before {
-  display: block;
-  content: "";
-  height: 120px;
-  margin-bottom: 30px;
-  background-color: $secondary-background-color;
-  border-radius: 4px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
+
 .benefits__item:nth-child(1)::before {
-  background-image: url(../images/Icon.svg/antenna\ 1.svg);
+  background-image: url(../images/Icon.svg/antenna.svg);
 }
 .benefits__item:nth-child(2)::before {
-  background-image: url(../images/Icon.svg/clock\ 1.svg);
+  background-image: url(../images/Icon.svg/clock.svg);
 }
 .benefits__item:nth-child(3)::before {
   background-image: url(../images/Icon.svg/Vector.svg);
 }
 .benefits__item:nth-child(4)::before {
-  background-image: url(../images/Icon.svg/astronaut\ 1.svg);
+  background-image: url(../images/Icon.svg/astronaut.svg);
 }
 .benefits__title {
   margin-top: 0;
