--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,31 +1,31 @@
 .clients__list {
   display: flex;
-  margin: 0;
-  padding: 0;
+  @extend %list;
   justify-content: space-between;
 }
 .clients__item {
   width: 170px;
   height: 92px;
 }
+
 .clients__link {
-  display: flex;
+  @extend %centeredFlex;
   width: 100%;
   height: 100%;
-  align-items: center;
-  justify-content: center;
-  fill: #afb1b8;
-  border-color: #757575;
-  border: 1px solid #afb1b8;
+  fill: $grey-colour;
+  border-color: $primary__text-color;
+  border: 1px solid $grey-colour;
 
   border-radius: 4px;
   transition: fill $transition-time $transition-cubic;
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+    border-color: $accent-color;
+  }
 }
-.clients__link:hover,
-.clients__link:focus {
-  fill: #2196f3;
-  border-color: #2196f3;
-}
+
 .clients__icon {
   width: 106px;
   height: 90px;
