--- a/sass/components/_team__social-list.scss
+++ b/sass/components/_team__social-list.scss
@@ -1,31 +1,30 @@
 .socials-list {
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  @extend %list;
   justify-content: space-between;
 }
 .socials-list__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %centeredFlex;
   width: 44px;
   height: 44px;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: #2196f3;
+  }
 }
+
 .socials-list__icon {
   padding: 0;
   border: 0;
   width: 20px;
   height: 20px;
   fill: #afb1b8;
-}
-.socials-list__link:hover,
-.socials-list__link:focus {
-  background-color: #2196f3;
-}
-.socials-list__link:hover .socials-list__icon,
-.socials-list__link:focus .socials-list__icon {
-  fill: #ffffff;
+
+  .socials-list__link:hover &,
+  .socials-list__link:focus & {
+    fill: #ffffff;
+  }
 }
