--- a/sass/components/_work-section.scss
+++ b/sass/components/_work-section.scss
@@ -1,41 +1,38 @@
 .work {
   padding-bottom: 94px;
 }
+
 .work__list {
   display: flex;
   flex-wrap: wrap;
   overflow: hidden;
 }
-.work__list .work__thumb {
+
+.work__thumb {
   position: relative;
-}
-.work__list .work__thumb::before {
-  display: block;
-  position: absolute;
-  content: "";
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
 
-  transition: transform $transition-time $transition-cubic;
-}
-.work__thumb:hover .text-desctop {
-  opacity: 1;
-  transition: opacity $transition-time $transition-cubic;
+  &::before {
+    display: block;
+    position: absolute;
+    content: "";
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+
+    transition: transform $transition-time $transition-cubic;
+  }
 }
 
-.work__thumb:hover::before {
-  opacity: 1;
-  transform: translateY(0);
-}
 .work__item {
   margin-right: $card-set-gap;
   overflow: hidden;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
 }
-.work__item:nth-child(3n) {
-  margin-right: 0;
-}
+
 .work__text {
   position: absolute;
   bottom: 0;
@@ -43,6 +40,7 @@
   display: flex;
   transform: translate(-50%);
 }
+
 .work__text--desktop {
   font-weight: 700;
   font-size: 14px;
