--- a/sass/components/portfolio/_portfolio-button.scss
+++ b/sass/components/portfolio/_portfolio-button.scss
@@ -3,9 +3,11 @@
   justify-content: center;
   margin-bottom: 50px;
 }
+
 .button-list__item:not(:last-child) {
   margin-right: 8px;
 }
+
 .button-list__button {
   border-radius: 4px;
   padding: 6px 22px;
@@ -24,11 +26,12 @@
   transition: color $transition-time $transition-cubic,
     background-color $transition-time $transition-cubic,
     box-shadow $transition-time $transition-cubic;
-}
-.button-list__button:hover,
-.button-list__button:focus {
-  color: $primari-bg-color;
-  background-color: $accent-color;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+
+  &:hover,
+  &:focus {
+    color: $primari-bg-color;
+    background-color: $accent-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
