--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,4 +1,5 @@
 @import "./utils/variables";
+@import "./utils/placeholders";
 @import "./components/base-utils";
 @import "./components/header-logo";
 @import "./components/navigation";
