--- a/sass/components/portfolio/_portfolio-card.scss
+++ b/sass/components/portfolio/_portfolio-card.scss
@@ -2,30 +2,33 @@
   display: flex;
   flex-wrap: wrap;
 }
+
 .portfolio-card__item {
   width: calc((100% - 60px) / 3);
   display: flex;
   margin-right: $card-set-gap;
   margin-bottom: $card-set-gap;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-card__item:hover,
-.portfolio-card__item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: box-shadow $transition-time $transition-cubic;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
-.portfolio-card__item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.portfolio-card__item:nth-child(3n) {
-  margin-right: 0;
-}
 .portfolio-card__thumb {
   overflow: hidden;
   position: relative;
 }
+
 .portfolio-card__text {
   display: inline-block;
   position: absolute;
@@ -37,8 +40,6 @@
   margin: 0;
   padding: 63px 24px;
   color: #ffffff;
-  /* opacity: 0; */
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   font-family: "Roboto";
   font-style: normal;
@@ -47,11 +48,15 @@
   line-height: 1.56;
   letter-spacing: 0.03em;
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity $transition-time $transition-cubic;
   transform: translateY(101%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform $transition-time $transition-cubic;
+
+  .portfolio-card__link:focus &,
+  .portfolio-card__link:hover & {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .card-content {
@@ -59,11 +64,7 @@
   background-color: $primari-bg-color;
   padding: 20px 24px;
 }
-.portfolio-card__link:focus .portfolio-card__text,
-.portfolio-card__link:hover .portfolio-card__text {
-  opacity: 1;
-  transform: translateY(0);
-}
+
 .card-content__title {
   margin: 0;
   margin-bottom: 4px;
@@ -74,9 +75,9 @@
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .card-content__text {
   margin: 0;
-
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
