--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,9 +5,12 @@ $secondary-color: #188ce8;
 $primari-bg-color: #ffffff;
 $main-background-color: #e5e5e5;
 $secondary-background-color: #f5f4fa;
+$grey-colour: #afb1b8;
 
 $card-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
   0px 2px 1px rgba(0, 0, 0, 0.2);
 $card-set-gap: 30px;
 $transition-time: 250ms;
 $transition-cubic: cubic-bezier(0.4, 0, 0.2, 1);
+
+$icons: "antenna", "clok", "Vector", "astronaut";
